UI fixes: 1. Hidden the 'Add Note' button when showing archived notes. 2. margin-top: 0 for <p> in a markdown (to keep the content aligned in a table).

--- a/frontend/enc-notes/src/App.css
+++ b/frontend/enc-notes/src/App.css
@@ -519,8 +519,12 @@ td:nth-child(4) .icon-button {
 }
 
 .note-preview-content {
-  padding: 15px;
+  padding: 10px;
   text-align: left;
+}
+
+.markdown p {
+  margin-top: 0;
 }
 
 /* Markdown Content Styles */
